fixed page jumping to top whenopening sidebar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,6 +22,10 @@
 
 header {
   display: flex;
+  position: fixed;
+  width: 100%;
+  z-index: 2;
+  background: white;
 }
 
 a {
@@ -77,9 +81,10 @@ a {
 }
 
 .sidebar {
-  height: 100%;
+  height: 100vh;
   width: 16rem;
   position: fixed;
+  top: 4rem;
   z-index: 1;
   overflow-x: hidden;
   transition: transform .2s ease;
@@ -118,7 +123,7 @@ a {
 
 footer {
   display: flex;
-  position: fixed;
+  z-index: 2;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -129,6 +134,7 @@ footer {
   justify-content: flex-end;
   border-top: 1px solid var(--divider-color);
   background-color: white;
+
 }
 
 footer a {
@@ -147,12 +153,11 @@ footer a {
 
 main {
   display: flex;
-  /* flex-direction: column; */
   row-gap: 1rem;
   flex-wrap: wrap;
   padding-left: 2rem;
   padding-right: 2rem;
-  padding-top: 2rem;
+  padding-top: 6rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -185,6 +190,10 @@ div {
   width: 100%;
   height: 16rem;
   border: 1px solid black;
+}
+
+div:nth-child(1) {
+  background-color: #6610f2;
 }
 
 .row {
